# rin

./: Cargo.toml  README.md
src/: lib.rs  main.rs  perceptron.rs  prelude.rs  utils.rs
src/algorithms/: perceptron.rs
src/perceptron/: simple_perceptron.rs
