[package]
name = "rin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5.9"
getset = "0.1.2"
ndarray = "0.15.4"
num-traits = "0.2.15"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
