[package]
name = "rin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
derive-getters = "0.2.0"
derive-new = "0.5.9"
ndarray = "0.15.4"
num-traits = "0.2.15"
polars = "0.25.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
typed-builder = "0.11.0"
